content/css/less/custom.less
@media print { 
 /* All your print styles go here */
 .savetrees { display: none !important; } 
}


.legal table{
  width: 100%;
  max-width: 100%;
  margin-bottom: 14px;

  > thead{
    > tr {
      > th,
      > td {
        padding: 8px;
        line-height: 14px;
        vertical-align: top;
        border-top: 1px solid #ddd;
      }
    }
  }

  // Cells
  > thead,
  > tbody,
  > tfoot {
    > tr {
      > th,
      > td {
        padding: 8px;
        line-height: 14px;
        vertical-align: top;
        border-bottom: 1px solid #ddd;
        border-left: 1px solid #ddd;
        border-right: 1px solid #ddd;
      }
    }
  }
  // Bottom align for column headings
  > thead > tr > th {
    vertical-align: bottom;
    border-bottom: 2px solid #ddd;
  }
  
  // Account for multiple tbody instances
  > tbody + tbody {
    border-top: 2px solid #ddd;
  }

  // Nesting
  .table {
    background-color: transparent;
  }
}


.slide-caption {
  max-width: 35%;
}

.navbar a.brand{
  padding-top:0px;
}

#footer-menu-logo a.brand, #footer-menu-logo img{
  padding:0;
  margin:0;
  display:block;
}
#footer-menu-logo a.brand{

  padding-top:7px;
}

ul.slides.clients li{ 
  padding-left:10px; 
  padding-right:10px;
  max-width:164px;
}

@media print {
  .navbar {
    .nav-collapse, .btn-navbar{
      display:none;
    }
    a[href]:after {
      content: none !important;
    }
  }
}

#page-title-inner {
  background: none;
  filter:none;
  background-color: @blue;

}

#page-title-inner a{
  color:white;
}
h1.mainheader a.header{
  color:white;
}
h1.mainheader a.header:hover{
  color:white;
}

form#newsletter{
  padding-left:0;
  margin-left:0;
}

/* Hide 'SEO blurb (only works for yahoo/bing'*/
div.site-subheader{
  display:none;
}

/* Price span tweaks */
.t .price{
  color:#3A741F;
}
.t p .price{
  font-weight:bold;
}

.t ul{
  list-style: disc inside;
  margin-top: 1em;
  margin-bottom:1em;
}

.pricer .col .details ul li{background: none;}

/* Search page tweaks */
.gsc-control-cse {background-color:inherit; border:0;}


.home-slider{
  margin-top:30px;
}

.whatisir p{
  font-size:140%;
  margin-top:7px;
}
.whatisir{
  margin-top:21px;
  margin-bottom:14px;
}


.client-logo-carousel {

}

/*Make client logo arrows more transparent */

.bx-transparent .bx-prev, .bx-transparent .bx-next {
  opacity:0.3;
}
.bx-transparent .bx-prev:hover, .bx-transparent  .bx-next:hover {
  opacity:1;
}

.bx-transparent .bx-viewport{
  -moz-box-shadow: none;
  -webkit-box-shadow: none;
  box-shadow:none;

}
.bx-transparent .bx-pager{
  padding-top:8px;
}
.bx-transparent .bx-wrapper{
  margin-bottom:35px;
}

a.block{display:block;}
a.plaintext {color:@textColor;}
a.plaintext:hover{
  text-decoration: none !important;
};

/*
a.block:hover .icons-box:after{
  content: " read more ";
}
*/
a.editlink{color:white; float:left;}

ul.category_headers{
  line-height:20px;
  list-style: none;
  li {
    display:inline-block;
    padding:5px;
  }
  li.active{
    font-weight:bold;
  }
}

.sub_nav_bar{
  text-align:right;
}


.testimonials_home ul.quotations li{
  font-size: 140%;
  margin-top: 20px;
}

.testimonials_home ul.quotations li .quote-author{
  font-weight: bold;
}


blockquote{
  border: 0;
  font-family: Georgia, serif;
  font-size: 18px;
  font-style: italic;
  width: 500px;
  margin: 0.25em 0;
  padding: 0.25em 40px;
  line-height: 1.45;
  position: relative;
  color: #383838;
}
blockquote:before {
  display: block;
  content: "\201C";
  font-size: 80px;
  position: absolute;
  left: -20px;
  top: -20px;
  color: #7a7a7a;
}

ul.quotations blockquote{
  width:auto;
}
ul.quotations blockquote cite{
  display:block;
  margin-top:0.5em;
  font-weight:bold;
}
ul.quotations blockquote cite span{
  font-weight:normal;
}


.discovery-main{ display: none !important;}

span.imagespacer{
  width:10px;
  display:inline-block;
}

.flexslider .slides .row img{
  display:inline-block;
  width:auto;
}
@media (min-width: 1200px) {
  .flexslider .slides > li {
    min-height:390px;
  }
}

@media (min-width: 980px) and (max-width: 1199px) {
  .flexslider .slides .row img{
    max-width:142px;
  }
}

@media (min-width: 768px) and (max-width: 979px) {
  .flexslider .slides .row img{
    max-width:106px;
  }
}

.flexslider .slides > li {
  background-color: #fafafa;
}



.madlibs{
  font-size: 24pt;
  line-height:2em;
}

.ml_noun{
  width:5em;
  text-align: center;
  display:inline-block;
  border: 1px solid gray;
}

.ourusersdo{
  font-size: 18pt;
  line-height:2em;
}

.home3{
  text-align:center;
  h1{
    font-weight:normal;
  }
}

.oddhomepageitem{
  background-color: #EBFAFF;
  padding-bottom: 20px;
}
.statsbar{
  background-color: #00aec4;
  color: #fff;
  vertical-align: middle;
  font-size: 10pt;
  margin-top:1em;
}
.statsnumber{
  font-size: 24pt;
}
.headerpadding{
  padding-top: 25px;
  padding-bottom: 10px;
}
.icons-box{
  border: none;
}
.icons-box:hover{
  border: none;
}
.sidespace{
  margin-right: 30px;
  margin-left: 30px;
}
.btn-buynow {
  .buttonBackground(@btnDangerBackground, @btnDangerBackgroundHighlight);
  padding: @paddingLarge;
  font-size: @fontSizeLarge;
  .border-radius(@borderRadiusLarge);
}
.bottompadding{
  padding-bottom: 20px;
}
a.block.plaintext.color:hover{
  background-color: #EBFAFF;
}

#page-title h2.no-icon{
  padding-left:0;
}

.home-code-bg{
  background: #002b36;
  overflow:hidden;
}
.home-code-box{
  text-shadow: 0;
  height:170px;
  padding:15px;
  display:table;
  overflow:hidden;

}
.home-image-bg{
  text-align:center;
  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAIUlEQVQYV2NkYGCQBGJ08BxdgHGIKMTiF0wPgjwz2BUCADTeBYguWvyCAAAAAElFTkSuQmCC) repeat;
}
.home-image-box{
  height:200px;
  display:table;
  width:100%;
}

.home-image-inner{
  display: table-cell;
  vertical-align: middle;
  overflow:hidden;
}

ul.code{
  font-size: 14pt;
  line-height: 2.5em;
  font-weight: 500;
  font-family: "Source Code Pro", "Consolas", "Courier New", monospace;
  color: #839496;
  text-shadow: 0;
  background: #002b36;
  display: table-cell;
  vertical-align: middle;
  width:100%;
  overflow:hidden;
}

@media (min-width: 768px) and (max-width: 979px) {
  ul.code{
  font-size:12pt;
  }
}
.home-code-box {
  .attrname{
    color: #2aa198;
  }
  .attrval{
    color: #268bd2; 
    
  }
  .tag{
    
  }

}

.leftzero{
  text-align:left;
  padding-left:0;
}

.container-wrap{
  padding-left:10px;
  padding-right:10px;
}

#typed-cursor{
  opacity: 1;
  font-weight: 100;
  -webkit-animation: blink 0.7s infinite;
  -moz-animation: blink 0.7s infinite;
  -ms-animation: blink 0.7s infinite;
  -o-animation: blink 0.7s infinite;
  animation: blink 0.7s infinite;
  margin-left:-0.2em;
  margin-right:-0.2em;

}
@keyframes blink{
  0% { opacity:1; }
  50% { opacity:0; }
  100% { opacity:1; }
}
@-webkit-keyframes blink{
  0% { opacity:1; }
  50% { opacity:0; }
  100% { opacity:1; }
}
@-moz-keyframes blink{
  0% { opacity:1; }
  50% { opacity:0; }
  100% { opacity:1; }
}
@-ms-keyframes blink{
  0% { opacity:1; }
  50% { opacity:0; }
  100% { opacity:1; }
}
@-o-keyframes blink{
  0% { opacity:1; }
  50% { opacity:0; }
  100% { opacity:1; }
}

.titledownload {
  border-bottom: 3px double #f6f6f6;
  margin-bottom: 10px;
}
.titledownload h1, .titledownlad h2 {
  border-bottom: 5px solid @o-accent-color !important;
  margin-bottom: -4px !important;
  display: inline-block !important;
  margin-right:15px !important;
}
ul.starlist.support {
  list-style: inside;
  margin: 10px;
}
.embed-container { 
  position: relative; 
  padding-bottom: 56.25%; 
  padding-top: 30px; 
  height: 0; 
  overflow: hidden; 
  max-width: 100%; 
  height: auto; 
} 
.embed-container iframe, .embed-container object { 
  position: absolute; 
  top: 0; 
  left: 0; 
  width: 100%; 
  height: 100%; 
}
code.nuget {
-moz-border-radius: 5px;
-webkit-border-radius: 5px;
background-color: #202020;
border: 4px solid silver;
border-radius: 5px;
box-shadow: 2px 2px 3px #6e6e6e;
color: #e2e2e2;
display: block;
font: 1.3em 'andale mono','lucida console',monospace;
line-height: 1.3em;
overflow: auto;
padding: 6px;
}


.download_section{
  padding-left:40px;
}
.inline_nav{
  display:inline;
}
.inline_nav li{
  display: inline;

}
.inline_nav li:after{
  content: " |  ";
}
.inline_nav li:last-child:after{
  content: '';
}

.troubleshooting h4{
  font-weight:bold !important;
  font-size: 16px;
  border-bottom: 1px solid gray;
  margin-top:2em;
  margin-bottom:.75em;
}

